move style properties

--- a/hello.html
+++ b/hello.html
@@ -3,9 +3,14 @@
 
     <head>
         <title>Hell0!</title>
+        <style>
+            h1{
+                color:blue
+            }
+        </style>
     </head>
     <body>
-        <h1 style="color:red">Welcome to my site</h1>
+        <h1 >Welcome to my site</h1>
 
         
         <h2>Hello exoample</h2>
