--- a/hello.html
+++ b/hello.html
@@ -5,7 +5,7 @@
         <title>Hell0!</title>
     </head>
     <body>
-        <h1 style="color:red">Welcome to my site</h1>
+        <h1 style="color:red">Welcome to my site!</h1>
 
         
         <h2>Hello exoample</h2>
